--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,11 +1,12 @@
 * {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 html {
-  font-size: 62.5%;
+    font-size: 62.5%;
 }
 
 body {
-  font-size: 1.6rem;
+    font-size: 1.6rem;
+    font-family: "Sora", sans-serif;
 }
